positionnement de la partie cciale

--- a/index.html
+++ b/index.html
@@ -8,25 +8,27 @@
 
 <body>
     <div id="home">
-        <h1>HANDZ</h1>
-        <p id="base-line">Le réseau social le plus grand du monde</p>
-        <img id="my-avatar" src="images/avatar-1.jpg"><a class="btn-link" href="#">Mon compte</a>
+        <div>
+            <h1>HANDZ</h1>
+            <p id="base-line">Le réseau social le plus grand du monde</p>
+            <img id="my-avatar" src="images/avatar-1.jpg"><a class="btn-link" href="#">Mon compte</a>
+        </div>
     </div>
 
     <div id="asset-list">
-        <div>
+        <div class="asset">
             <img class="picto" src="images/mobile_ffffff.svg">
             <h2>Application web et mobile</h2>
             <p class="asset-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, commodi.</p>
         </div>
 
-        <div>
+        <div class="asset">
             <img class="picto" src="images/security_ffffff.svg">
             <h2>Vos informations sécurisées</h2>
             <p class="asset-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque, laudantium!</p>
         </div>
 
-        <div>
+        <div class="asset">
             <img class="picto" src="images/unique_ffffff.svg">
             <h2>Une plateforme unique</h2>
             <p class="asset-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, culpa?</p>
