positionnement de la 1ère partie

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <div id="home">
-        <div>
+        <div id="text-home">
             <h1>HANDZ</h1>
             <p id="base-line">Le réseau social le plus grand du monde</p>
             <img id="my-avatar" src="images/avatar-1.jpg"><a class="btn-link" href="#">Mon compte</a>
